hard-gists/3803893/run.log
=== Docker Run Log for 3803893 ===
Started at: Mi 29. Okt 14:00:50 CET 2025

[2025-10-29 14:00:51] START: Running container for 3803893
[2025-10-29 14:00:51] SUCCESS: Container ff7b93468610c2c0e37140dc97afb9b8c123c96c9a012cafe4be7d4a84a4ac0b started for 3803893
=== Container logs for 3803893 ===
  File "/snippet.py", line 167
    print cmat(casecon, genotype, rare_cutoff=0.05)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3803893 ===
[2025-10-29 14:00:53] INFO: Container ff7b93468610c2c0e37140dc97afb9b8c123c96c9a012cafe4be7d4a84a4ac0b has stopped
